Updated the look 1

--- a/resources/css/StudentDashboard.css
+++ b/resources/css/StudentDashboard.css
@@ -207,3 +207,19 @@ body {
         padding: 15px;
     }
 }
+/* Global Styling */
+@font-face {
+    font-family: 'Adys';
+    src: url('/WOFF/ADYS-Regular.woff2') format('woff2'),
+         url('/WOFF/ADYS-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body {
+    font-family: 'Adys', sans-serif;
+    margin: 0;
+    padding: 0;
+    background: linear-gradient(to bottom, #f0f8ff, #dbeafe);
+    color: #333;
+}
