--- a/resources/css/StudentDashboard.css
+++ b/resources/css/StudentDashboard.css
@@ -41,11 +41,11 @@ body {
     background: linear-gradient(to bottom right, #ffb703, #fb8500);
     color: white;
     font-weight: bold;
+    font-size: 1.4rem;
     border: none;
     border-radius: 10px;
     padding: 10px 15px;
     cursor: pointer;
-    font-size: 1rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
     transition: all 0.3s ease;
 }
@@ -59,6 +59,7 @@ body {
 .assign-textbook-container {
     margin: 20px 0;
     text-align: center;
+    font-size: 2rem;
 }
 
 .assign-textbook-dropdown {
@@ -67,7 +68,7 @@ body {
     padding: 10px 15px;
     border: 1px solid #ccc;
     border-radius: 10px;
-    font-size: 1rem;
+    font-size: 1.4rem;
     margin-right: 10px;
 }
 
@@ -165,7 +166,7 @@ body {
     box-shadow: 0 0 12px 3px rgba(96, 125, 139, 0.6);
     transform: scale(1);
     transition: all 0.4s ease;
-    opacity: 0.8; /* Slightly transparent */
+    opacity: 0.7; /* Slightly transparent */
 }
 
 .homework-page.completed-homework:hover {
@@ -242,4 +243,9 @@ body {
         padding: 15px;
         padding-top: 10px;
     }
+}
+h2{
+    font-size: 2em;
+    font-weight: bold;
+    font-style: oblique;
 }
