--- a/resources/css/TeacherDashboard.css
+++ b/resources/css/TeacherDashboard.css
@@ -120,7 +120,7 @@ body {
     margin-bottom: 10px;
     cursor: pointer;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 1.4rem;
     text-align: center;
     transition: transform 0.3s, box-shadow 0.3s;
     box-shadow: 0 5px 10px rgba(0, 118, 228, 0.3);
@@ -135,4 +135,7 @@ body {
     text-align: center;
     color: #666;
     font-size: 16px;
+}
+h2{
+    font-size: 1.6rem;
 }
