--- a/resources/css/TeacherSubmissions.css
+++ b/resources/css/TeacherSubmissions.css
@@ -36,8 +36,7 @@
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    font-size: 1rem;
-    width: 200px;
+    font-size: 1.4rem;
 }
 
 .assign-btn {
@@ -46,7 +45,7 @@
     color: #fff;
     border: none;
     border-radius: 5px;
-    font-size: 1rem;
+    font-size: 1.4rem;
     cursor: pointer;
     transition: background 0.3s ease;
 }
@@ -109,4 +108,7 @@
     .submission-item canvas {
         height: 500px; /* Adjust stage height for smaller screens */
     }
+}
+h2{
+    font-size: 1.4rem;
 }
