--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -2,6 +2,7 @@
     max-width: 400px;
     margin: 0 auto;
     background-color: #ffffff;
+    top: 20px;
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
