--- a/resources/css/GuestLayout.css
+++ b/resources/css/GuestLayout.css
@@ -3,7 +3,7 @@
     min-height: 80vh;
     align-items: center;
     justify-content: center;
-    background: url('background.jpg') no-repeat center center fixed; /* Path to your background image */
+    background: url('background.jpg') no-repeat center center fixed; 
     background-size: cover;
     padding-top: 0rem;
 }
@@ -26,7 +26,7 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 0.5rem;
     overflow: hidden;
-    margin-top: 30px;
+    margin-top: 20px;
 
     padding: 50px;
     border-radius: 10px;
