--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -2,15 +2,15 @@
     max-width: 400px;
     margin: 0 auto;
     background-color: #ffffff;
-    top: 20px;
-    padding: 30px;
+    top: 0px;
+    padding: 0px;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
 
 .login-header {
-    font-size: 24px;
+    font-size: 1.4em;
     color: #004b8d;
     margin-bottom: 20px;
     font-weight: bold;
@@ -26,7 +26,7 @@
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 8px;
-    font-size: 14px;
+    font-size: 1.4em;
     margin-top: 5px;
     box-sizing: border-box;
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
@@ -40,13 +40,13 @@
 
 .error-message {
     margin-top: 5px;
-    font-size: 14px;
+    font-size: 1.4em;
     color: #e74c3c;
 }
 
 .remember-me {
     text-align: left;
-    font-size: 24px;
+    font-size: 1.4em;
 }
 
 .form-footer {
@@ -59,7 +59,7 @@
 .forgot-password-link {
     color: #0073e6;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 1.4em;
     transition: color 0.3s ease;
 }
 
@@ -97,11 +97,14 @@
 .text-link {
     color: #0073e6;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 1.4em;
     font-weight: bold;
     transition: color 0.3s ease;
 }
 
 .text-link:hover {
     color: #005bb5;
+}
+h2{
+    font-size: 1.4em;
 }
